Rajout d'une requête PATCH pour la partie Player. Refactor + clean up des imports. Labo fini.