@@ -1,17 +1,20 @@
 package ch.heig.basket.api.services;
 
 import ch.heig.basket.api.entities.BasketPlayer;
+import ch.heig.basket.api.entities.BasketTeam;
+import ch.heig.basket.api.entities.BasketTrophy;
 import ch.heig.basket.api.exceptions.PlayerNotFoundException;
 import ch.heig.basket.api.exceptions.TeamNotFoundException;
 import ch.heig.basket.api.repositories.PlayerRepository;
-import ch.heig.basket.api.repositories.TeamRepository;
-import ch.heig.basket.api.repositories.TrophyRepository;
 import org.modelmapper.ModelMapper;
 import org.openapitools.model.PlayerID;
+import org.openapitools.model.PlayerPatch;
 import org.openapitools.model.Playerobj;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class PlayerService {
@@ -25,7 +28,7 @@ public class PlayerService {
     }
 
     public List<Playerobj> getPlayers() {
-        return playerRepository.findAll().stream().map(basketPlayer -> modelMapper.map(basketPlayer, Playerobj.class)).toList();
+        return playerRepository.findAll().stream().map(basketPlayer -> modelMapper.map(basketPlayer, Playerobj.class)).collect(Collectors.toList());
     }
 
     public int addPlayer(PlayerID player) throws TeamNotFoundException {
@@ -59,6 +62,38 @@ public class PlayerService {
         }
 
         playerRepository.delete(p);
+    }
+
+    public void patchPlayer(PlayerPatch playerPatch) throws PlayerNotFoundException {
+
+        BasketPlayer basketPlayer = modelMapper.map(playerRepository.findById(playerPatch.getId()), BasketPlayer.class);
+
+        if(basketPlayer == null) {
+            throw new PlayerNotFoundException(playerPatch.getId());
+        }
+
+        if(playerPatch.getName() != null) {
+            basketPlayer.setName(playerPatch.getName());
+        }
+        if(playerPatch.getSurname() != null) {
+            basketPlayer.setSurname(playerPatch.getSurname());
+        }
+        if(playerPatch.getTeamId() != null) {
+            BasketTeam b = new BasketTeam();
+            b.setId(playerPatch.getTeamId());
+            basketPlayer.setTeam(b);
+        }
+        if(playerPatch.getTrophiesId() != null) {
+            List<BasketTrophy> Listbt = new ArrayList<>();
+
+            for (Integer t : playerPatch.getTrophiesId()) {
+                BasketTrophy basketTrophy = modelMapper.map(playerRepository.findById(t), BasketTrophy.class);
+                Listbt.add(basketTrophy);
+            }
+            basketPlayer.setTrophies(Listbt);
+        }
+
+        playerRepository.save(basketPlayer);
     }
 
 }
